--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,4 +44,26 @@ jobs:
           tags: |
             marcosallanluz/api-bootcamp-produto:latest
             marcosallanluz/api-bootcamp-produto:${{github.run_number}}
+  CD:
+    runs-on: ubuntu-latest
+    needs: [CI]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Kubernetes set context
+        uses: Azure/k8s-set-context@v1
+        with:
+          # Acceptable values: kubeconfig or service-account
+          method: kubeconfig
+          # Kubernetes Config
+          kubeconfig: ${{secrets.k8s_CONFIG}}
+      - name: Deploy to Kubernetes cluster
+        uses: Azure/k8s-deploy@v1.3
+        with:
+          manifests: |
+          k8s/mongodb/deployment.yaml
+          k8s/mongodb/service.yaml
+          
+          
+       
+    
       
