--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,12 @@ jobs:
           manifests: |
             k8s/mongodb/deployments.yaml
             k8s/mongodb/service.yaml
-          
+      
+      - name: Deploy WebAPI
+        uses: Azure/k8s-deploy@v1.3
+        with:
+          manifests: |
+            k8s/api/deployments.yaml
           
        
     
