--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
         uses: Azure/k8s-deploy@v1.3
         with:
           manifests: |
-            k8s/api/deployments.yaml
+            k8s/api/deployment.yaml
           
        
     
