alteração deploy api

--- a/k8s/api/deployment.yaml
+++ b/k8s/api/deployment.yaml
@@ -3,7 +3,6 @@ kind: Deployment
 metadata:
   name: api
 spec:
-  replicas: 10
   selector:
     matchLabels:
       app: api
@@ -14,7 +13,7 @@ spec:
     spec:
       containers:
       - name: api
-        image: marcosallanluz/api-bootcamp-produto:v2
+        image: marcosallanluz/api-bootcamp-produto
         ports:
         - containerPort: 8080
         env:
@@ -34,4 +33,4 @@ spec:
     - port: 80
       targetPort: 8080
       nodePort: 30000
-  type: NodePort
+  type: LoadBalancer
